en/2.0/user/search-sort.rst
===========
Search sort
===========

This page is generated by Machine Translation from Japanese.

Sort search
===========

To sort the search results by specifying the fields such as search time.

You can sort the following fields by default.

+-----------------+------------------------------------------------+
| Tstamp          | On the crawl                                   |
+-----------------+------------------------------------------------+
| contentLength   | You crawl the content size                     |
+-----------------+------------------------------------------------+
| lastModified    | Last update of the content you want to crawl   |
+-----------------+------------------------------------------------+

How to sort
-----------

If you want to sort ' sort: field name ' in to fill out the search form,
the search.

In ascending order sort the content size as a search term, Fess is
below.

::

    Fess sort:contentLength

To sort in descending order as below.

::

    Fess sort:contentLength.desc

If you sort by multiple fields separated list, shown below.

::

    Fess sort:contentLength.desc,lastModified
