en/6.0/user/search-sort.rst
===========
Search sort
===========

This page is generated by Machine Translation from Japanese.

Sort search
===========

To sort the search results by specifying the fields such as search time.

Sort field
----------

You can sort the following fields by default.

+-----------------+------------------------------------------------+
| Tstamp          | On the crawl                                   |
+-----------------+------------------------------------------------+
| contentLength   | You crawl the content size                     |
+-----------------+------------------------------------------------+
| lastModified    | Last update of the content you want to crawl   |
+-----------------+------------------------------------------------+

Table: Sort fields list

</table>
Adding custom fields as sort in Customizing.

How to use the
--------------

You can select the sorting criteria when you search.

|image0|

Also, for sorting in the search field sort: the field name to sort and
field names separated by colon (:) fill out the search form, the search.

In ascending order sort the content size as a search term, Fess is
below.

::

    Fess sort:contentLength

To sort in descending order as below.

::

    Fess sort:contentLength.desc

If you sort by multiple fields separated list, shown below.

::

    Fess sort:contentLength.desc,lastModified

.. |image0| image:: ../../../resources/images/en/6.0/user/search-sort-1.png
